made a lil layout with the links i think i want (none of them lead anywhere rn though)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,43 @@
   </head>
 
   <body>
+
+      <li>
+        <a href="/">
+          Home
+        </a>
+      </li>
+
+      <li>
+        <a href="/user_sign_up">
+          Sign Up
+        </a>
+      </li>
+
+      <li>
+        <a href="/user_sign_in">
+          Sign In
+        </a>
+      </li>
+
+      <li>
+        <a href="/user_sign_out">
+          Sign Out
+        </a>
+      </li>
+      
+      <li>
+        <a href="/user_profile">
+          User Profile
+        </a>
+      </li>
+
+      <li>
+        <a href="/saved_concerts">
+          Saved Concerts
+        </a>
+      </li>
+
     <%= yield %>
   </body>
 </html>
