phone numbers are standardized and checked for validation (US only though)

--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -13,10 +13,10 @@
     <input type="text" id="home_city_box" name="query_home_city">
   </div>
          
-  <div>
+  <%# <div>
     <label for="artist_box">Artist</label>
     <input id="artist_box" name="query_artist" type="checkbox">
-  </div>
+  </div> %>
          
   <div>
     <label for="name_box">Name</label>
