just what my workspace looked like at the end of OH 3/11/21

--- a/app/views/user_authentication/my_profile.html.erb
+++ b/app/views/user_authentication/my_profile.html.erb
@@ -32,5 +32,9 @@
 </div>
 
 <div>
-Links to Artists you're following
+List of Artists you're following and all the Concerts only in your city
+</div>
+
+<div>
+List of Artists you're following and all their Concerts
 </div>
