attempted to simplify navbar to what i think i need

--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -40,6 +40,10 @@
       </div>
 
       <div>
+        Don't see your Artist here? Go <a href="/artists">here</a> to add a new artist.
+      </div>
+
+      <div>
         <label for="tour_id_box">
           Tour
         </label>
