--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,23 +17,26 @@
             Resources
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a href="/interests" class="dropdown-item">
+            <%# <a href="/interests" class="dropdown-item">
               Interests
-            </a>
-            <a href="/tours" class="dropdown-item">
+            </a> %>
+            <%# <a href="/tours" class="dropdown-item">
               Tours
-            </a>
+            </a> %>
             <a href="/artists" class="dropdown-item">
-              Artists
+              Add New Artists
             </a>
-            <a href="/follows" class="dropdown-item">
+            <%# <a href="/follows" class="dropdown-item">
               Follows
-            </a>
+            </a> %>
             <a href="/concerts" class="dropdown-item">
-              Concerts
+              Add New Concerts
             </a>
             <a href="/saved_concerts" class="dropdown-item">
               Saved Concerts
+            </a>
+            <a href="/view_all" class="dropdown-item">
+              View All Artists and Concerts
             </a>
           </div>
         <% end %>
