--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -1,9 +1,13 @@
 <div>
   <div>
     <h1>
-      List of all interests
+      List of Saved Concerts
     </h1>
   </div>
+</div>
+
+<div>
+List of saved concerts and ticket sales, alert sent/not sent
 </div>
 
 <hr>
