moved things from layout --> navbar (not all yet)

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,6 +35,9 @@
             <a href="/saved_concerts" class="dropdown-item">
               Saved Concerts
             </a>
+            <a href="/user_profile" class="dropdown-item">
+              User Profile
+            </a>
             <a href="/view_all" class="dropdown-item">
               View All Artists and Concerts
             </a>
