fixed the navbar a lil more

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Artist #<%= @the_artist.id %> details
+      <%= @the_artist.name %>
     </h1>
 
     <div>
@@ -16,6 +16,11 @@
           Delete artist
         </a>
       </div>
+    </div>
+
+    <div>
+      Follow this artist to receive notifications any time a new concert is added in your city!
+      Follow button
     </div>
 
     <dl>
