--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container">
     <a class="navbar-brand" href="/">
-      FinalProject
+      Concert Tracker
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsible-nav-links" aria-controls="collapsible-nav-links" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <% if @current_user == nil %>
+      <div>
+        <a href="/user_sign_up">
+          Sign Up
+        </a>
+      </div>
+      <div>
+        <a href="/user_sign_in">
+          Sign In
+        </a>
+      </div>
+      <% else %>
+      <div>
+        <a href="/user_sign_out">
+          Sign Out
+        </a>
+      </div>
+    <% end %>
 
     <div class="collapse navbar-collapse" id="collapsible-nav-links">
       <ul class="navbar-nav mr-auto">
@@ -40,6 +59,9 @@
             </a>
             <a href="/view_all" class="dropdown-item">
               View All Artists and Concerts
+            </a>
+            <a href="/" class="dropdown-item">
+              Home
             </a>
           </div>
         <% end %>
