--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Interest #<%= @the_interest.id %> details
+      Concert #<%= @the_interest.id %> details
     </h1>
 
     <div>
@@ -13,7 +13,7 @@
 
       <div>
         <a href="/delete_interest/<%= @the_interest.id %>">
-          Delete interest
+          I'm not interested anymore.
         </a>
       </div>
     </div>
