adding concert names (rather than tour names)

--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -23,6 +23,14 @@
         <input type="date" id="date_box" name="query_date">
       </div>
 
+      <div>
+        <label for="concert_id_box">
+          Concert Name
+        </label>
+
+        <input type="text" id="concert_id_box" name="query_concert_id">
+      </div>
+
       <%# <div>
         <label for="time_box">
           Time
@@ -85,6 +93,10 @@
         </th>
 
         <th>
+          Concert Name
+        </th>
+
+        <th>
           City
         </th>
 
@@ -113,6 +125,10 @@
 
         <td>
           <%= a_concert.date %>
+        </td>
+
+        <td>
+          Concert Title
         </td>
 
         <td>
