--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -21,7 +21,7 @@ List of saved concerts and ticket sales, alert sent/not sent
     <form action="/insert_interest" method="post">
       <div>
         <label for="concert_id_box">
-          Concert
+          Concert Name
         </label>
 
         <input type="text" id="concert_id_box" name="query_concert_id">
