--- a/app/views/concerts/viewall.html.erb
+++ b/app/views/concerts/viewall.html.erb
@@ -14,6 +14,10 @@
         </th>
 
         <th>
+          Concert Name
+        </th>
+
+        <th>
           City
         </th>
 
@@ -45,6 +49,10 @@
 
         <td>
           <%= a_concert.date %>
+        </td>
+
+        <td>
+          Concert Title
         </td>
 
         <td>
