added concert name options

--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -24,11 +24,11 @@
       </div>
 
       <div>
-        <label for="concert_id_box">
+        <label for="concert_name_box">
           Concert Name
         </label>
 
-        <input type="text" id="concert_id_box" name="query_concert_id">
+        <input type="text" id="concert_name_box" name="query_concert_id">
       </div>
 
       <%# <div>
@@ -128,7 +128,7 @@
         </td>
 
         <td>
-          Concert Title
+          <%= a_concert.name %>
         </td>
 
         <td>
