--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -17,10 +17,11 @@
     <form action="/insert_concert" method="post">
       <div>
         <label for="date_box">
-          Date
+          Concert Date
         </label>
 
         <input type="datetime-local" id="date_box" name="query_date">
+        (Time is local to your timezone)
       </div>
 
       <div>
@@ -38,8 +39,6 @@
 
         <input type="time" id="time_box" name="query_time">
       </div> %>
-
-      undefined method for time on concerts controller page?
 
       <div>
         <label for="city_box">
@@ -89,7 +88,7 @@
       <tr>
 
         <th>
-          Date
+          Concert Date
         </th>
 
         <th>
