--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -25,6 +25,15 @@
       </div>
 
       <div>
+        <label for="ticket_time_box">
+          Ticket Sale Date
+        </label>
+
+        <input type="datetime-local" id="ticket_time_box" name="query_ticket_time">
+        (Time is local to your timezone)
+      </div>
+
+      <div>
         <label for="concert_name_box">
           Concert Name
         </label>
@@ -92,6 +101,10 @@
         </th>
 
         <th>
+          Ticket Sale Date
+        </th>
+
+        <th>
           Concert Name
         </th>
 
@@ -124,6 +137,10 @@
 
         <td>
           <%= a_concert.date.strftime("%A, %d %b %Y %l:%M %p") %>
+        </td>
+
+        <td>
+          <%#= a_concert.ticket_time.strftime("%A, %d %b %Y %l:%M %p") %>
         </td>
 
         <td>
