--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -58,7 +58,7 @@
               User Profile
             </a>
             <a href="/view_all" class="dropdown-item">
-              View All Concerts
+              View All Concerts and Artists
             </a>
             <a href="/" class="dropdown-item">
               Home
