--- a/app/views/user_authentication/my_profile.html.erb
+++ b/app/views/user_authentication/my_profile.html.erb
@@ -34,6 +34,10 @@
 </div>
 
 <div>
+  See all your saved concerts <a href="/interests">here</a> instead.
+<div>
+
+<div>
 List of Artists you're following and all the Concerts only in your city
 </div>
 
