a little more cleanup with tables/details on the page

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -75,33 +75,4 @@
   </div>
 </div>
 
-<hr>
-
-<h1><%= @the_artist.name %> Concerts</h1>
-
-<hr>
-<div>
-  <div>
-    <table>
-      <tr>
-        <th>
-          Concert Date
-        </th>
-
-        <th>
-          Concert Name
-        </th>
-
-        <th>
-          City
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-Add loop here
+<%#= loop here with concerts only by that artist? %>
