--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -18,6 +18,14 @@
       </div>
 
       <div>
+        <a href="/interests">
+          Go back to your Saved Concerts page
+        </a>
+      </div>
+
+      <hr>
+
+      <div>
         <a href="/delete_concert/<%= @the_concert.id %>">
           Delete concert
         </a>
