--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -91,7 +91,7 @@
         </td>
 
         <td>
-          <a href="/interests/<%= an_interest.id %>">
+          <a href="/interests/<%= an_interest.id %>"> <%#= /concerts/ and leaving the an_interest creates an error within the show/concerts page, for some reason %>
             Show details
           </a>
         </td>
