just cleaned up some table details

--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -78,7 +78,7 @@
       <%# </dd> %>
 
       <dt>
-        Updated at
+        Latest Information Added
       </dt>
       <dd>
         <%= time_ago_in_words(@the_concert.updated_at) %> ago
