--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -41,7 +41,7 @@
       </dd>
 
       <dt>
-        Updated at
+        Latest Information Added
       </dt>
       <dd>
         <%= time_ago_in_words(@the_interest.updated_at) %> ago
