--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -55,7 +55,7 @@
               Saved Concerts
             </a>
             <a href="/user_profile" class="dropdown-item">
-              User Profile
+              My Profile
             </a>
             <a href="/view_all" class="dropdown-item">
               View All Concerts and Artists
