All the basic details/layout of the pages are done; now it's just fixin the text messages and we are good to go!!

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -13,7 +13,7 @@
 
       <div>
         <a href="/view_all">
-          Go back to the View All Artists page
+          Go back to the View All Concerts and Artists page
         </a>
       </div>
 
@@ -23,6 +23,8 @@
         </a>
       </div>
     </div>
+
+    <hr>
 
     <dl>
       <dt>
