--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -13,7 +13,7 @@
 
       <div>
         <a href="/view_all">
-          Go back to the View All Concerts page
+          Go back to the View All Concerts and Artists page
         </a>
       </div>
 
@@ -23,6 +23,23 @@
         </a>
       </div>
 
+      <hr>
+
+      <% matching_bookmarks = Interest.where({ :user_id => @current_user.id, :concert_id => @the_concert.id }) %>
+          <% the_bookmark = matching_bookmarks.at(0) %>
+          <% if the_bookmark != nil %>
+            <a href="/delete_interest/<%= the_bookmark.id %>">
+              I'm not interested anymore
+            </a>
+          <% else %>
+            <form action="/insert_interest" method="post">
+              <input type="hidden" name="query_concert_id" value="<%= @the_concert.id %>">
+              <input type="hidden" name="query_user_id" value="<%= @current_user.id %>">
+              <button>
+                Mark your interest
+              </button>
+            </form>
+          <% end %>
       <hr>
 
       <div>
@@ -88,23 +105,6 @@
 </div>
 
 <hr>
- <% matching_bookmarks = Interest.where({ :user_id => @current_user.id, :concert_id => @the_concert.id }) %>
-    <% the_bookmark = matching_bookmarks.at(0) %>
-    <% if the_bookmark != nil %>
-      <a href="/delete_interest/<%= the_bookmark.id %>">
-        I'm not interested anymore
-      </a>
-    <% else %>
-      <form action="/insert_interest" method="post">
-        <input type="hidden" name="query_concert_id" value="<%= @the_concert.id %>">
-        <input type="hidden" name="query_user_id" value="<%= @current_user.id %>">
-        <button>
-          Mark your interest
-        </button>
-      </form>
-    <% end %>
-<hr>
-
 
 <div>
   <div>
